--- a/app/templates/app/productdetail.html
+++ b/app/templates/app/productdetail.html
@@ -58,7 +58,7 @@
         </a>
 
         <!-- Wishlist -->
-        {% if wishlist %}
+        {% if in_wishlist %}
           <button type="button" pid="{{ product.id }}" 
                   class="minus-wishlist btn btn-danger shadow-sm">
             <i class="bi bi-heart-fill"></i>
